Bit more code cleanup